# carty

./: .gitignore
game/: project.godot
game/resources/: axle_tuning.tres
game/resources/axle_tunings/: test_front.tres  test_rear.tres
game/resources/power_tunings/: test_car_power.tres
game/scenes/levels/: TestTrackLevel.tscn
game/scenes/prefabs/cars/: TestCar.tscn
game/scenes/tracks/: TestTrack.tscn
game/scenes/ui/controls/: LabeledHSlider.tscn
game/scenes/ui/windows/: HandlingTuningWindow.tscn  PowerTuningWindow.tscn
game/scripts/: car.gd
game/scripts/resources/: axle_tuning.gd  power_tuning.gd
server/: Cargo.toml
server/src/: client.rs  dispatcher.rs  lib.rs  main.rs  room.rs  server.rs
server/src/actions/: clients.rs  looping.rs  mod.rs  rooms.rs
server/src/magic/: errors.rs  headers.rs  mod.rs
