[package]
name = "server"
version = "0.1.0"
authors = ["Rūdolfs Agris Stilve <rudolfsagris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
threadpool = "1.7.1"
rand = "0.7.3"
byteorder = "1.3.4"
crossbeam = "0.7.3"
num-traits = "0.2"
num-derive = "0.3"
rayon = "1.3.0"
guardian = "1.0.1"